# jaxsr

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: NOTEBOOK_REVIEW_SUMMARY.md  _config.yml  _toc.yml  api.md  comprehensive_tutorial.ipynb  doe_guide.md  index.md  intro.md  literature_review.md  quickstart.md
docs/api/: acquisition.rst  additive.rst  basis.rst  classifier.rst  constraints.rst  index.rst  metrics.rst  plotting.rst  regressor.rst  rsm.rst  sampling.rst  selection.rst  uncertainty.rst
docs/background/: comparison-alamo-sisso-jaxsr.md  literature_review.md
docs/examples/: active_learning.ipynb  additive_symbolic_regression.ipynb  basic_usage.ipynb  categorical_variables.ipynb  chemical_kinetics.ipynb  cli_workflow.ipynb  comprehensive_tutorial.ipynb  constraint_enforcement.ipynb  doe_study_workflow.ipynb  gibbs_duhem_activity.ipynb  gpu_benchmarks.ipynb  heat_transfer.ipynb  langmuir_doe_active_learning.ipynb  model_comparison_isotherms.ipynb  multi_output.ipynb  ode_discovery.ipynb  rsm_formulation.ipynb  serialization_and_sharing.ipynb  sklearn_integration.ipynb  uncertainty_quantification.ipynb
docs/guides/: acquisition.md  additive-symbolic-regression.md  claude_code_skills.md  cli_guide.md  doe_guide.md  performance.md  sklearn-integration.md
examples/: active_learning.ipynb  active_learning.py  additive_symbolic_regression.py  basic_usage.ipynb  basic_usage.py  categorical_variables.ipynb  categorical_variables.py  chemical_kinetics.ipynb  chemical_kinetics.py  cli_workflow.ipynb  cli_workflow.md  comprehensive_tutorial.ipynb  constrained_sinwave.ipynb  constraint_enforcement.ipynb  doe_study_workflow.ipynb  doe_study_workflow.py  gibbs_duhem_activity.ipynb  gpu_benchmarks.ipynb  heat_transfer.ipynb  heat_transfer.py  langmuir_doe_active_learning.ipynb  model_comparison_isotherms.ipynb  ode_discovery.ipynb  rsm_formulation.ipynb  serialization_and_sharing.ipynb  sklearn_integration.ipynb  symbolic_classification.ipynb  uncertainty_quantification.ipynb  uncertainty_quantification.py
manuscript/: jaxsr-paper.org
scripts/: check_anova_filtering.py  check_imports.py  validate_notebooks.py
src/jaxsr/: __init__.py  _compat.py  (+18 more)
tests/: __init__.py  test_acquisition.py  test_additive.py  test_basis.py  test_categorical.py  test_classifier.py  test_cli.py  test_constraints.py  test_dynamics.py  test_excel.py  test_integration.py  test_neuropt.py  test_parametric.py  test_regressor.py  test_reporting.py  test_rsm.py  test_selection.py  test_sklearn_compat.py  test_study.py  test_uncertainty.py
(+56 files in other folders)
